objects/MMPJ_TOPG_VolumeBench__c.object
<CustomObject>
    <description>Used for MMPJ TopGun app</description>
    <fields>
        <fullName>MMPJ_TOPG_AlcoholType__c</fullName>
        <label>Alcohol Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VS</fullName>
                </value>
                <value>
                    <fullName>VSOP</fullName>
                </value>
                <value>
                    <fullName>MCB</fullName>
                </value>
                <value>
                    <fullName>XO</fullName>
                </value>
                <value>
                    <fullName>Brut</fullName>
                </value>
                <value>
                    <fullName>Rosé</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_Competitor_Brand_Name__c</fullName>
        <label>Competitor Brand Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_IsCompetitor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>MMPJ</description>
        <inlineHelpText>This field is check if the benchmark product related to a competitor</inlineHelpText>
        <label>Competitor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_MarqueBenchmark__c</fullName>
        <label>Marque Benchmark</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_Related_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Brand</label>
        <referenceTo>MMPJ_TOPG_Brand__c</referenceTo>
        <relationshipName>Volumes_Benchs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_StatementDate__c</fullName>
        <label>Statement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_Visit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visit</label>
        <referenceTo>MMPJ_TOPG_Visit__c</referenceTo>
        <relationshipName>Volumes_Benchs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Volume &amp; Bench</label>
    <nameField>
        <label>Volume &amp; Bench Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Volumes &amp; Benchs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>